# 添加子项目

#基础层
#add_subdirectory(0-Base)
#抽象模型层
#add_subdirectory(1-Model)
#功能层
#add_subdirectory(2-Funcation)
#逻辑层
#add_subdirectory(3-Logic)
#应用
#add_subdirectory(Application)


add_subdirectory(RigelMath)
add_subdirectory(RigelCore)
add_subdirectory(RigelQt)
add_subdirectory(RigelModel)
add_subdirectory(RigelMessage)
add_subdirectory(Rigel)
